<resources>
    <string name="app_name">Raasta</string>
    <string name="welcome">WELCOME</string>
    <string name="create_a_new_account">CREAT NEW ACCOUNT</string>
    <string name="login">LOG IN</string>
    <string name="safety_rules_are_your_best_tools">/Safety rules are your best tools</string>
    <string name="password">Password</string>
    <string name="todo">todo</string>
    <string name="forget_password">Forget Password</string>
    <string name="username">Username</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign up</string>
</resources>