<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".Activity1">

    <ImageView
        android:layout_width="313dp"
        android:layout_height="308dp"
        android:layout_margin="@dimen/cardview_default_radius"
        android:cropToPadding="true"
        android:layout_gravity="center"
        android:src="@drawable/userlogin"
        android:contentDescription="@string/todo" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,RtlSymmetry,TextFields" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textStyle="bold"

        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor,RtlSymmetry,TextFields" />
    <TextView
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/dont_have_an_account_sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:letterSpacing="0.03"/>



</LinearLayout>