<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="40dp"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:cropToPadding="true"
        android:src="@drawable/logo1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:text="@string/welcome"
        android:textColorHighlight="@color/black"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:text="safety rules are your best tools"
        android:textColorHighlight="@color/black"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/create_a_new_account"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/Button1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:radius="500dp"/>





</LinearLayout>

